# atlas-native-client

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  atlas_client.cc  atlas_client.h  create-lcov-report.sh  gen_per_buckets_tags.cc  gen_perc_bucket_tags.cc  gen_perc_bucket_values.cc  gen_valid_chars.cc  main.cc  run-build.sh  types.h
.github/workflows/: pr.yml  release.yml  snapshot.yml
bench/: CMakeLists.txt  README.md  tags.cc
bench/code/: eval_subs.cc  parse_json.cc  tags.cc
bundle/: pcre.sh
interpreter/: aggregation.cc  aggregation.h  all.cc  all.h  context.cc  context.h  evaluator.cc  evaluator.h  expression.cc  expression.h  group_by.cc  group_by.h  interpreter.cc  interpreter.h  keep_drop_tags.cc  keep_drop_tags.h  multiple_results.cc  multiple_results.h  query.cc  query.h  query_index.h  singleton_value_expr.cc  singleton_value_expr.h  tags_value.cc  tags_value.h  vocabulary.cc  vocabulary.h  word.h
meter/: aggregate_registry.cc  aggregate_registry.h  atlas_registry.cc  atlas_registry.h  bucket_counter.cc  bucket_counter.h  bucket_distribution_summary.cc  bucket_distribution_summary.h  bucket_functions.cc  bucket_functions.h  bucket_timer.cc  bucket_timer.h  clock.cc  clock.h  consolidation_registry.cc  consolidation_registry.h  counter.h  default_counter.h  default_distribution_summary.h  default_gauge.cc  default_gauge.h  default_long_task_timer.cc  default_long_task_timer.h  default_max_gauge.h  default_timer.cc  default_timer.h  distribution_summary.h  function_gauge.h  gauge.h  id.cc  id.h  id_format.h  interval_counter.cc  interval_counter.h  long_task_timer.h  manual_clock.h  measurement.h  meter.h  monotonic_counter.cc  monotonic_counter.h  (+35 more)
resources/: atlas-config-reference.json
test/: aggr_registry_test.cc  atlas_registry_test.cc  bucket_counter_test.cc  bucket_dist_summary_test.cc  bucket_functions_test.cc  bucket_timer_test.cc  collections_test.cc  config_manager_test.cc  config_test.cc  cons_registry_test.cc  default_counter_test.cc  default_dist_summary_test.cc  default_max_gauge_test.cc  default_timer_test.cc  environment_test.cc  expression_test.cc  function_gauge_test.cc  gauge_test.cc  http_server.cc  http_test.cc  interpreter_test.cc  interval_counter_test.cc  long_task_timer_test.cc  monotonic_counter_test.cc  percentile_buckets_test.cc  percentile_dist_summary_test.cc  percentile_timer_test.cc  queries_test.cc  query_idx_test.cc  query_utils.h  runtests.cc  small_tag_map_test.cc  steplong_test.cc  strings_test.cc  subscription_counter_test.cc  subscription_dist_summary_test.cc  subscription_max_gauge_test.cc  subscription_registry_test.cc  subscription_timer_test.cc  subscriptions_manager_test.cc  (+7 more)
test/resources/: config.json  many-subs.json  metadata.json  subs1.json
util/: buffer.cc  buffer.h  collections.h  config.cc  config.h  config_manager.cc  config_manager.h  dump.h  environment.cc  environment.h  file_watcher.h  gzip.cc  gzip.h  http.cc  http.h  intern.cc  intern.h  json.h  logger.cc  logger.h  optional.h  small_tag_map.cc  small_tag_map.h  string_pool.cc  string_pool.h  strings.cc  strings.h  valid_chars_generated.inc  vector.h  xxhash.h
