if(BUILD_BENCHMARKS STREQUAL "ON") 
  set(BENCHMARK_ENABLE_TESTING "OFF")
  set(BENCHMARK_ENABLE_INSTALL "OFF")
  set(BENCHMARK_HAS_CXX11 "ON")
  add_subdirectory(../3rd-party/benchmark gbench)
  file(GLOB bench_files RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/code" "code/*.cc")
  foreach(bench_file IN LISTS bench_files)
    string(REPLACE ".cc" "" bench_file "${bench_file}")
    add_executable(${bench_file} code/${bench_file}.cc)
    message("Adding ${bench_file} code/${bench_file}.cc")
    target_link_libraries(${bench_file} atlasclient pthread benchmark)
  endforeach()
endif()
